# dhall-ffi

./: CHANGELOG.md  DhallFFI.hs  README.md  dhall-ffi.cabal  dhall_haskell.py  foreign.buildinfo
py_dhall_haskell/: __init__.py  dll.py  expressions.py  foreign_data.py
