cabal-version:       >=1.18

name:                dhall-ffi
version:             0.1.0.0
license-file:        LICENSE
author:              Jan Rydzewski
maintainer:          flegmer@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

--library
--  other-modules:       DhallFFI
--  extra-tmp-files:     foreign.buildinfo
--  -- install-includes:    DhallFFI_stub.h
--  build-depends:       base >=4.13 && <4.14
--               ,       dhall >=1.31 && <1.32
--               ,       text >=1.2.4.0 && < 1.3
--               -- ,       c2hs >=0.28 && <0.29
--  default-language:    Haskell2010

foreign-library dhallffi
  type:                native-shared
  other-modules:       DhallFFI
  build-depends:       base >=4.14 && <4.15
               ,       dhall >=1.31 && <1.32
               ,       text >=1.2.3.2 && <1.3
               ,       binary >=0.8.7.0 && <0.9
               ,       bytestring >= 0.10.10.0 && < 0.11
               -- ,       c-storable-deriving
               -- ,       c2hs >=0.28 && <0.29
  default-language:    Haskell2010
